Add project files.

--- a/Autobus/View/AppSettings.xaml
+++ b/Autobus/View/AppSettings.xaml
@@ -14,20 +14,20 @@
                 <StackPanel>
                     <HeaderedContentControl Header="RESİM EN">
                         <Extension:NumericUpDownControl Maximum="1024" Minimum="120" SmallChange="1"
-                    Value="{Binding Path=ResimEn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
+                            Value="{Binding Path=ResimEn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                     </HeaderedContentControl>
                     <HeaderedContentControl Header="RESİM BOY">
                         <Extension:NumericUpDownControl Maximum="1024" Minimum="160" SmallChange="1"
-                    Value="{Binding Path=ResimBoy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
+                            Value="{Binding Path=ResimBoy, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                     </HeaderedContentControl>
                     <HeaderedContentControl Header="ORTALAMA HIZ">
                         <Extension:NumericUpDownControl Maximum="400" Minimum="1" SmallChange="1" ToolTip="Tahimini Varış Süresinde Ortalama Hız."
-                    Value="{Binding Path=OrtalamaHız, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
+                            Value="{Binding Path=OrtalamaHız, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                     </HeaderedContentControl>
                     <CheckBox Content="SÜRESİ GEÇEN SEFERLERİ GİZLE" IsChecked="{Binding Path=SüresiGeçenSeferleriGizle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                     <CheckBox Content="MÜŞTERİ RESİM GÖSTER"
-                IsChecked="{Binding Path=TümSeferlerResimGöster, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}"
-                ToolTip="Bu İşaretliyse Tüm Seferler Ekranında Müşteri Resimleri Gösterilir." />
+                        IsChecked="{Binding Path=TümSeferlerResimGöster, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}"
+                        ToolTip="Bu İşaretliyse Tüm Seferler Ekranında Müşteri Resimleri Gösterilir." />
                     <HeaderedContentControl Header="ANİMASYON TİPİ">
                         <ComboBox SelectedValue="{Binding Path=AnimasyonTipi, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" SelectedValuePath="Tag">
                             <ComboBoxItem Content="FOLD" Tag="0" />
@@ -39,9 +39,9 @@
                             <CheckBox Content="VARSAYILAN GİRİŞ EKRANI" IsChecked="{Binding Path=EkranSeç, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                         </HeaderedContentControl.Header>
                         <ComboBox DisplayMemberPath="Value"
-                    IsEnabled="{Binding Path=EkranSeç, Mode=OneWay, Source={x:Static properties:Settings.Default}}"
-                    ItemsSource="{Binding DefaultScreen, Source={StaticResource MainViewModel}}"
-                    SelectedIndex="{Binding VarsayılanEkran, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
+                            IsEnabled="{Binding Path=EkranSeç, Mode=OneWay, Source={x:Static properties:Settings.Default}}"
+                            ItemsSource="{Binding DefaultScreen, Source={StaticResource MainViewModel}}"
+                            SelectedIndex="{Binding VarsayılanEkran, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Source={x:Static properties:Settings.Default}}" />
                     </HeaderedContentControl>
                 </StackPanel>
             </TabItem>
@@ -57,11 +57,11 @@
                                 <StackPanel>
                                     <TextBlock Text="{Binding Ad}" HorizontalAlignment="Center" />
                                     <ComboBox VerticalContentAlignment="Center"
-                                            ItemTemplate="{StaticResource ColorItemTemplate}"
-                                            ItemsPanel="{StaticResource ColorPanelTemplate}"
-                                            ItemsSource="{Binding Mode=OneWay, Source={StaticResource ColorList}}"
-                                            SelectedValue="{Binding Renk}"
-                                            SelectedValuePath="Name" />
+                                        ItemTemplate="{StaticResource ColorItemTemplate}"
+                                        ItemsPanel="{StaticResource ColorPanelTemplate}"
+                                        ItemsSource="{Binding Mode=OneWay, Source={StaticResource ColorList}}"
+                                        SelectedValue="{Binding Renk}"
+                                        SelectedValuePath="Name" />
                                 </StackPanel>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -72,8 +72,8 @@
                         </ItemsControl.ItemsPanel>
                     </ItemsControl>
                     <Button Grid.Row="1"
-                            Command="{Binding Kaydet}"
-                            CommandParameter="{Binding Mode=OneWay, Source={StaticResource MainViewModel}}">
+                        Command="{Binding DatabaseSave, Source={StaticResource MainViewModel}}"
+                        CommandParameter="{Binding Mode=OneWay, Source={StaticResource MainViewModel}}">
                         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                             <Image Width="32" Height="32">
                                 <Image.Source>
